Inclusão de descritores farmacoforicos 3D

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -14,6 +14,14 @@
   urlaccessdate = {8 nov. 2011}
 }
 
+@book{bajorath2004chemoinformatics,
+  title={Chemoinformatics: concepts, methods, and tools for drug discovery},
+  author={Bajorath, J{\"u}rgen},
+  volume={275},
+  year={2004},
+  publisher={Springer Science \& Business Media}
+}
+
 @inproceedings{singh2004reasoning,
   title={Reasoning about molecular similarity and properties},
   author={Singh, Rahul},
