Reformulação descricao finger print

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -13,6 +13,16 @@
   url = {http://sourceforge.net/apps/ mediawiki/abntex/index.php},
   urlaccessdate = {8 nov. 2011}
 }
+@article{xue2000molecular,
+  title={Molecular descriptors in chemoinformatics, computational combinatorial chemistry, and virtual screening},
+  author={Xue, Ling and Bajorath, Jurgen},
+  journal={Combinatorial Chemistry \& High Throughput Screening},
+  volume={3},
+  number={5},
+  pages={363--372},
+  year={2000},
+  publisher={Bentham Science Publishers}
+}
 
 @book{bajorath2004chemoinformatics,
   title={Chemoinformatics: concepts, methods, and tools for drug discovery},
