--- a/conteudo/fundamentacao.tex
+++ b/conteudo/fundamentacao.tex
@@ -31,6 +31,14 @@ similaridade, pois o descritor molecular é considerado um fator determinante da
 aplicada para cálculo da similaridade estrutural. Nesta seção será apresentado alguns
 descritores utilizados por sistemas que calculam similaridade entre moléculas\apud{todeschini2008handbook}{koes2011pharmer}.
 
+\subsection{FingerPrints}
+As Fingerprints podem ser consideradas como um descritor molecular complexo. Nesta forma representação computacional de uma molécula, todas as características e grupos funcionais presentes em um dado composto, são codificados em \textit{bitstreams} (Sequencia de bits 0 e 1) únicos para cada estrutura \cite{xue2000molecular}. Além dos grupos funcionais, e características inerentes a uma determinada molécula, as fringerprints também são capazes de armazenar em sua estrutura as distancias entre estruturas do composto, caminhos conexos dessa através de toda a estrutura molecular, ou diferentes tipos de farmacóforos de interesse do pesquisador \cite{todeschini2008handbook}.
+
+Uma das vantagens na utilização de fingerprints na química computacional, é a capacidade de armazenamento de características intrísecas de um composto em um formato de relativamente fácil manipulação por sistemas computacionais. Por exemplo, dentre os modelos de fingerprints mais utilizados na química-computacional, podemos citar a Daylight fingerprint, que utiliza em torno de 2048 bits para armazenamento de propriedades, características, e distâncias moleculares de um único composto, sendo que para esse tipo de descritor não ocorre uma relação direta entre um bit e um determinado grupo funcional/característica (como em modelos de figerprints mais simples), na verdade determinadas caracteristicas, distancias, e/ou propriedades podem ser mapeadas através de algorítmos de \textit{Hashing} para fornecer assim padões de bits cada vez mais específicos, permitindo maior fidelidade na representação das propriedades de uma molécula em um sistema computacional \cite{xue2000molecular}.
+
+Outra importante vantagem da utilização de figerprints para representação computacional de uma molécula reside na simplicidade de aplicação de métodos e métricas para comparacação moléculas baseado no conceito de similaridade molecular \cite{xue2000molecular}. Nesta perspectiva, devido as características intrísicas  desse descritor molecular, o processo de triagem virtual em um banco de dados molecular, pode ser realizado através da geração de fingerprints para cada uma das moléculas do banco e da molécula de consulta, e da aplicação de métricas de similaridade molecular de relativamente fácil implementação em sistemas computacionais como: Coeficiente de Tanimoto, Coeficiente de Tversky, Dice entre outras, que basicamente obtem um determinado coeficiente de similaridade entre duas estruturas moleculares através da realização de um cálculo estatístico que leva em consideração as estruturas e caracteristicas compartilhadas e as singulares das moléculas comparadas. No sistema NatProDB, as fingerprints possuem um papel fundamental no processo de triagem de moleculas de seu banco de dados, uma vez que tal descritor é utilizado para comparação de moléculas conforme será descrito mais aprofundadamente no próximo capítulo.  
+     
+
 \subsection{Descritores Farmacofóricos 3D}
 Os descritores farmacofóricos tridimensionais quantificam propriedades e as distâncias entre  farmacóforos biológicos importantes para a interação entre o ligante e receptor  \cite{bajorath2004chemoinformatics}. Dentre essas propriedades de interesse de pesquisadores podemos citar: grupos funcionais ou características chaves em determinada orientação, doadores/receptores de ligações de hidrogênio, partes de uma molécula, entre outras. Normalmente, um descritor farmacofórico 3D são compostos basicamente por 3 ou 4 características, e de 3 a 6 distancias entre elas. 
 Quando a conformação biológica entre o ligante e receptor é conhecida, é possível identificar     
