Reformulação descricao fingerprint

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -24,6 +24,13 @@
   publisher={Bentham Science Publishers}
 }
 
+@book{anderson1987smiles,
+  title={SMILES, a line notation and computerized interpreter for chemical structures},
+  author={Anderson, Eric and Veith, Gilman D and Weininger, David},
+  year={1987},
+  publisher={US Environmental Protection Agency, Environmental Research Laboratory}
+}
+
 @book{bajorath2004chemoinformatics,
   title={Chemoinformatics: concepts, methods, and tools for drug discovery},
   author={Bajorath, J{\"u}rgen},
