Reformulação descricao fingerprint

--- a/conteudo/fundamentacao.tex
+++ b/conteudo/fundamentacao.tex
@@ -69,13 +69,13 @@ outras representações possíveis, dependendo da estratégia de notação adota
 pesquisador. Dessa forma é muito comum, para facilitar a busca em bancos de dados, a 
 utilização de um formato SMILE canônico, ou seja, que padroniza qualquer SMILE para um 
 formato único, o que facilita a manipulação de qualquer molécula, sem aumentar a 
-complexidade dessa operação para o pesquisador Kumar (KUMAR, 2012).
+complexidade dessa operação para o pesquisador(KUMAR, 2012).
 
 Este descritor molecular, além de necessitar de recursos computacionais relativamente 
-baixos para representação de uma molécula computacionalmente, devido sua estrutura é 
+baixos para representação de uma molécula, devido sua estrutura, é 
 bastante utilizado no desenvolvimento de fármacos, principalmente nas atividades que 
-envolvem a busca de estruturas similares, com uma desejada atividade biológica, pois por ser 
-um descritor molecular linear, ele permite a conversão de uma comparação de moléculas 
+envolvem a busca de estruturas similares com uma desejada atividade biológica, pois por ser 
+um descritor molecular linear, ele permite a simplificação de uma comparação de moléculas 
 realizadas por exemplos em uma forma tridimensional, em uma comparação linear de cadeias 
 de caracteres, de mais fácil manipulação em um computador. 
 
