--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -13,6 +13,55 @@
   url = {http://sourceforge.net/apps/ mediawiki/abntex/index.php},
   urlaccessdate = {8 nov. 2011}
 }
+@article{huang2008localized,
+  title={Localized co-occurrence model for fast approximate search in 3D structure databases},
+  author={Huang, Zi and Shen, Heng Tao and Zhou, Xiaofang},
+  journal={Knowledge and Data Engineering, IEEE Transactions on},
+  volume={20},
+  number={4},
+  pages={519--531},
+  year={2008},
+  publisher={IEEE}
+}
+
+@article{willett2003similarity,
+  title={Similarity-based approaches to virtual screening},
+  author={Willett, P},
+  journal={Biochemical Society Transactions},
+  volume={31},
+  number={3},
+  pages={603--606},
+  year={2003},
+  publisher={Portland Press Limited}
+}
+@article{vidal2005lingo,
+  title={LINGO, an efficient holographic text based method to calculate biophysical properties and intermolecular similarities},
+  author={Vidal, David and Thormann, Michael and Pons, Miquel},
+  journal={Journal of chemical information and modeling},
+  volume={45},
+  number={2},
+  pages={386--393},
+  year={2005},
+  publisher={ACS Publications}
+}
+@article{machao2011gpu,
+  title={GPU accelerated chemical similarity calculation for compound library comparison},
+  author={Ma, Chao and Wang, Lirong and Xie, Xiang-Qun},
+  journal={Journal of chemical information and modeling},
+  volume={51},
+  number={7},
+  pages={1521--1527},
+  year={2011},
+  publisher={ACS Publications}
+}
+@ONLINE {Dogra2007,
+    author = "Dogra, Shaillay K.",
+    title  = "Script for computing Tanimoto coefficient",
+    month  = "jan",
+    year   = "2007",
+    url    = "http://www.qsarworld.com/virtual-workshop.php"
+}
+
 @article{xue2000molecular,
   title={Molecular descriptors in chemoinformatics, computational combinatorial chemistry, and virtual screening},
   author={Xue, Ling and Bajorath, Jurgen},
