--- a/conteudo/desenvolvimento.tex
+++ b/conteudo/desenvolvimento.tex
@@ -38,17 +38,12 @@ Tamb\'em \'e apresentado o exemplo da Tabela~\ref{tab:correlacao}, que aparece a
 
 \section{Equa\c{c}\~oes}
 
-A transformada de Laplace \'e dada na equa\c{c}\~ao~(\ref{eq:laplace}), enquanto a equa\c{c}\~ao~(\ref{eq:dft}) apresenta a formula\c{c}\~ao da transformada discreta de Fourier bidimensional\footnote{Deve-se reparar na formata\c{c}\~ao esteticamente perfeita destas equa\c{c}\~oes!}.
-
+A transformada de Laplace \'e dada na equa\c{c}\~ao~(\ref{eq:laplace}), enquanto a equa\c{c}\~ao apresenta a formula\c{c}\~ao da transformada discreta de Fourier bidimensional\footnote{Deve-se reparar na formata\c{c}\~ao esteticamente perfeita destas equa\c{c}\~oes!}.
 \begin{equation}
 X(s) = \int\limits_{t = -\infty}^{\infty} x(t) \, \text{e}^{-st} \, dt
 \label{eq:laplace}
 \end{equation}
 
-\begin{equation}
-F(u, v) = \sum_{m = 0}^{M - 1} \sum_{n = 0}^{N - 1} f(m, n) \exp \left[ -j 2 \pi \left( \frac{u m}{M} + \frac{v n}{N} \right) \right]
-\label{eq:dft}
-\end{equation}
 
 \section{Siglas e s\'imbolos}
 
