--- a/indexMonografia.tex
+++ b/indexMonografia.tex
@@ -16,6 +16,7 @@
 \usepackage[call=authordata,alf,abnt-emphasize=bf,abnt-etal-text=emph,abnt-and-type=&,abnt-etal-list=3,abnt-etal-cite=3,recuo=0.0cm]{abntcite}
 \usepackage[brazil]{babel}
 \usepackage{mathptmx}
+\usepackage{mathtools}
 \usepackage[pdftex]{graphicx}
 %\usepackage[small,bf]{caption}
 \usepackage{longtable}
@@ -44,6 +45,7 @@
     \listadesiglas % % geracao automatica da lista de siglas
     % sumario
     \sumario % geracao automatica do sumario
+    \renewcommand{\theequation}{\arabic{equation}}
     \input{conteudo/introducao}
     \input{conteudo/desenvolvimento}
     \input{conteudo/fundamentacao}
